# sceideal

./: .env  .gitignore  Cargo.toml  README.md  justfile  main.scss  package-lock.json  package.json
frontend/: next.config.js  package-lock.json  package.json  shared-types.ts
frontend/components/: asyncSearchSelect.tsx  basic.tsx  confirmationModal.tsx  goBackLayout.tsx  hooks.tsx  layout.tsx  navbar.tsx  settingsLayout.tsx  settings_layout.tsx
frontend/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  login.tsx  sign-up.tsx
frontend/pages/settings/: account.tsx  appointment-types.tsx  availability.tsx  classes.tsx  groups.tsx  locations.tsx  membership.tsx  profile.tsx  topics.tsx  users.tsx
frontend/pages/settings/groups/: [id].tsx  index.tsx
frontend/pages/settings/users/: [id].tsx  index.tsx
frontend/styles/: globals.scss
migrations/2023-03-31-212658_create_users/: up.sql
migrations/2023-04-01-000001_create_email_domain/: down.sql  up.sql
migrations/2023-04-01-000002_create_phone_domain/: down.sql
migrations/2023-04-01-065417_create_appt_type/: down.sql  up.sql
migrations/2023-04-01-070743_create_provides/: up.sql
migrations/2023-04-01-071800_create_durations/: up.sql
migrations/2023-04-01-071819_create_appointments/: up.sql
server/: Cargo.toml  example_config.toml
server/migrations/2023-03-31-000001_create_email_domain/: down.sql  up.sql
server/migrations/2023-03-31-212658_create_users/: up.sql
server/migrations/2023-04-01-000002_create_phone_domain/: down.sql  up.sql
server/migrations/2023-04-01-070743_create_provides/: down.sql
server/migrations/2023-04-01-071335_create_locations/: down.sql  up.sql
server/migrations/2023-04-01-071819_create_appointments/: up.sql
server/migrations/2023-05-12-184401_create_users_table/: down.sql  up.sql
server/migrations/2023-05-12-191507_create_local_login_table/: down.sql  up.sql
server/migrations/2023-05-12-191937_create_group_table/: down.sql  up.sql
server/migrations/2023-05-12-193203_create_group_membership_table/: down.sql  up.sql
server/migrations/2023-05-12-193458_create_non_user_table/: down.sql  up.sql
server/migrations/2023-05-12-194307_create_duration_table/: down.sql  up.sql
server/migrations/2023-05-12-200000_create_groups_table/: down.sql  up.sql
server/migrations/2023-05-12-200539_create_topic_table/: down.sql  up.sql
server/migrations/2023-05-12-200539_create_topics_table/: up.sql
server/migrations/2023-05-13-220336_create_location_table/: down.sql  up.sql
server/migrations/2023-05-13-221624_create_appointment_table/: down.sql  up.sql
server/migrations/2023-05-13-224001_create_upload_table/: down.sql  up.sql
server/migrations/2023-05-14-014440_create_oauth_login_table/: down.sql  up.sql
server/migrations/2023-05-14-014440_create_openid_login_table/: down.sql  up.sql
server/migrations/2023-05-19-182427_create_class_table/: down.sql  up.sql
server/migrations/2023-05-19-182441_create_is_member_of_table/: down.sql  up.sql
server/migrations/2023-05-19-182441_create_is_student_in_table/: down.sql  up.sql
server/migrations/2023-05-19-182454_create_can_teach_in_table/: down.sql  up.sql
server/migrations/2023-05-19-182515_create_can_teach_table/: down.sql  up.sql
server/migrations/2023-05-19-182515_create_teaches_table/: down.sql  up.sql
server/migrations/2023-05-19-184942_create_appointment_types_table/: down.sql  up.sql
server/migrations/2023-05-19-185000_create_provides_type_table/: down.sql  up.sql
server/migrations/2023-05-19-185644_create_appointments_table/: up.sql
server/migrations/2023-05-19-194548_create_is_attending_table/: down.sql  up.sql
server/migrations/2023-05-19-195400_create_uploads_table/: up.sql
server/migrations/2023-05-28-010949_create_oauth_connections_table/: down.sql  up.sql
server/src/: auth.rs  config.rs  group.rs  http_error.rs  locations.rs  main.rs  model.rs  oauth.rs  schema.rs  utils.rs
server/src/integrations/: mod.rs
server/src/user/: local.rs  mod.rs  oauth.rs  openid_connect.rs  session.rs
src/: app.rs  auth.rs  lib.rs  main.rs  schema.rs
